--- a/.travis.yml
+++ b/.travis.yml
@@ -17,16 +17,16 @@ script:
   - docker --version # print the version for logging
   # - docker build -t simple-node .
   # - docker tag simple-node nguyenquangos0302app/simple-node:latest
-  - docker build -t udagram-api-feed ./udagram-api-feed .
+  - docker build -t udagram-api-feed ./udagram-api-feed
   - docker tag udagram-api-feed nguyenquangos0302app/udagram-api-feed
 
-  - docker build -t udagram-api-user ./udagram-api-user .
+  - docker build -t udagram-api-user ./udagram-api-user
   - docker tag udagram-api-user nguyenquangos0302app/udagram-api-user
 
-  - docker build -t udagram-frontend ./udagram-frontend .
+  - docker build -t udagram-frontend ./udagram-frontend
   - docker tag udagram-frontend nguyenquangos0302app/udagram-frontend
 
-  - docker build -t reverseproxy ./udagram-reverseproxy .
+  - docker build -t reverseproxy ./udagram-reverseproxy
   - docker tag reverseproxy nguyenquangos0302app/reverseproxy
 
 after_success:
