--- a/udagram-k8s/frontend-service.yaml
+++ b/udagram-k8s/frontend-service.yaml
@@ -7,12 +7,10 @@ metadata:
   namespace: default
 spec:
   ports:
-    - port: 8100
+    - name: '8100'
+      port: 8100
       protocol: TCP
-      targetPort: 8100
+      targetPort: 80
   selector:
     app: udagram-frontend
-  sessionAffinity: None
-  type: ClusterIP
-status:
-  loadBalancer: {}
+  type: LoadBalancer
