--- a/udagram-k8s/backend-feed-deployment.yaml
+++ b/udagram-k8s/backend-feed-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: backend-feed
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: backend-feed
@@ -19,6 +19,13 @@ spec:
           image: nguyenquangos0302app/udagram-api-feed
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              memory: '64Mi'
+              cpu: '250m'
+            limits:
+              memory: '1024Mi'
+              cpu: '500m'
           env:
             - name: URL
               valueFrom:
